Naive css to make sure feed spans are aligned

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -235,6 +235,17 @@ aside {
     margin-bottom: 5px;
   }
 }
+
 .maxlimit {
   color: $red;
+}
+
+div.feed {
+  &.left {
+    width: 20%;
+  }
+  &.right {
+    display: inline-block;
+    width: 80%;
+  }
 }
